scroller doesnt work like it should but code a bit more cleaner